# mxtools

./: .editorconfig  .env  .gitignore  CHANGELOG.md  README.md  TODO.md  eslint.config.ts  index.html  package.json  tsconfig.json  vite.config.ts
.run/: Clear exif.run.xml
docs/: CHANGELOG.md  PROJECT_STRUCTURE.md  TODO.md  videoconfig.txt
scripts/: fix-imports.mjs  generate-mdi-icons.mjs  rename-release-builds.mjs
src/: App.vue  enum.ts  env.ts  main.ts  router.ts  themes.ts  toast.ts  type.ts  vuetify.ts
src-tauri/: Cargo.toml  manifest.xml  tauri.conf.json
src-tauri/capabilities/: permissions.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_info.rs  backups.rs  elevated.rs  input_method.rs  lib.rs  logger.rs  main.rs  port_forwarding.rs  rdp.rs  registry.rs  stdio_tee.rs  system.rs  test.rs  user.rs  utils.rs
src-tauri/src/game/: apex.rs  ea_desktop.rs  mod.rs  pubg.rs  steam.rs
src/assets/styles/: global.css  settings.sass  styles.css  utils.css
src/components/: AppTopBar.vue  Navigation.vue
src/components/backups/: BackupsExplorerRegistry.vue  BackupsPortForwarding.vue
src/components/common/: ZoomableImage.vue
src/components/game/: CloseSteamApplyAccount.vue  SteamUser.vue
src/components/icons/: ApexLegendsIcon.vue  EAIcon.vue  PUBGIcon.vue
src/components/navigation/: NavPanelResizeHandle.vue
src/components/test/: test-avatar.vue  (+3 more)
src/constants/: nav_layout.ts
src/data/: apex_launch_options_config.ts  apex_video_config.ts  game_refresh_rate_presets.ts  game_resolution_presets.ts  imgloc.ts  pubg_launch_options_config.ts  steam.ts  url.ts  url_video.ts  video.ts
src/i18n/: en-US.ts  i18n.ts  zh-CN.ts
src/icons/: mdi-icons.ts
src/pages/: GamePage.vue  ServerPage.vue  WindowsPage.vue
src/stores/: debug.ts  port_forwarding.ts  rdp.ts  settings.ts  state.ts  style.ts  windows_user.ts
src/types/: apex.ts  apex_quick_preset.ts  app.ts  ea.ts  game.ts  index.ts  network.ts  rdp.ts  steam.ts  windows.ts
src/utils/: apex_dvs.ts  apex_gamma.ts  app_info.ts  debug.ts  enum.ts  event.ts  global-shortcuts.ts  hmr.ts  image_gamma.ts  locale.ts  logger.ts  open-folder.ts  regex.ts  restore-last-route-hash.ts  router.ts  tauri_store.ts  ui.ts  windows.ts
src/views/: AboutView.vue  DashboardView.vue  Error404View.vue  HomeView.vue  SettingsView.vue  TestView.vue  WelcomeView.vue
(+173 files in other folders)
